@@ -1,3 +1,8 @@
+########  2012-12-28  #########
+alter table shop_users_user add column contacter varchar(32) NOT NULL;
+alter table shop_users_user add column phone varchar(20) NOT NULL;
+alter table shop_users_user add column mobile varchar(20) NOT NULL;
+alter table shop_users_user add column area_code varchar(10) NOT NULL;
 ########  2012-12-12  #########
 alter table shop_monitor_systemconfig drop is_confirm_delivery_auto;
 ########  2012-12-06  #########
